# microservice-service-architecture-fastapi

./: .env  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/dependencies/: auth.py
app/api/routes/: profile_routes.py
app/core/: config.py  exceptions.py  logger.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 20260529_88d82cc4d1fc_create_profiles_table.py
app/infrastructure/cache/: valkey_client.py
app/infrastructure/messaging/: broker.py
app/infrastructure/messaging/consumers/: identity_consumer.py  identity_consumer_backup.py
app/models/: profile.py
app/repositories/: profile_repository.py
app/schemas/: profile_schema.py
app/schemas/events/: identity_events.py  profile_events.py
app/services/: profile_service.py
infra/: docker-compose.yml
profile_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: publish_test_event.py
