[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "profile-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation and settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Messaging
    "faststream[kafka]>=0.5.0",

    # Cache (Valkey is Redis-compatible)
    "redis>=5.0.0",

    # JWT decoding
    "python-jose[cryptography]>=3.3.0",

    # Structured logging
    "structlog>=24.1.0",

    # HTTP client
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]